Bug 366163 - korganizer don't sync with owncloud 9.x
Summary: korganizer don't sync with owncloud 9.x
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: groupware (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-27 13:23 UTC by Icecube63
Modified: 2016-08-01 11:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Icecube63 2016-07-27 13:23:18 UTC
korganizer don't sync weddav/caldav caused by a change at the caldav-adress at owncloud 9.x. Setting an new calendar i have the given pass <ip>/remote.php/caldav/, the new path at owncloud 9.x is <ip>/remote.php/dav/.

I can't change this settings manual, the botton <ok> ist lightgrey and don`t work. Maybe this is a archlinux specific problem.

Reproducible: Always
Comment 1 Laurent Montel 2016-08-01 11:37:35 UTC
Git commit 636801e900d0945d8fc45accd106da6351d53780 by Montel Laurent.
Committed on 01/08/2016 at 11:37.
Pushed by mlaurent into branch 'Applications/16.08'.

Fix Bug 366163 - korganizer don't sync with owncloud 9.x

FIXED-IN: 5.3.0

M  +1    -1    resources/dav/resource/setupwizard.cpp
A  +8    -0    resources/dav/services/owncloud-pre9.desktop
M  +2    -2    resources/dav/services/owncloud.desktop

http://commits.kde.org/kdepim-runtime/636801e900d0945d8fc45accd106da6351d53780