Fix Bug 366163 - korganizer don't sync with owncloud 9.x

FIXED-IN: 5.3.0
BUG: 366163